Restructured page to be able to style it as per model

--- a/index.html
+++ b/index.html
@@ -13,40 +13,40 @@
   </head>
   <body>
     <div class="summary-card">
-      <img
-        src="./assets/images/illustration-hero.svg"
-        alt="Order summary header image"
-        class="summary-card__header-img"
-      />
+      <figure class="summary-card__header">
+        <img
+          src="./assets/images/illustration-hero.svg"
+          alt="Order summary card header image"
+          class="summary-card__header-img"
+        />
+      </figure>
       <div class="summary-card__content">
-        <h1 class="summary-card__content-main-title">Order Summary</h1>
-        <p class="summary-card__content-description-txt">
+        <h1 class="summary-card__card-title">Order Summary</h1>
+        <p class="summary-card__card-description">
           You can now listen to millions of songs, audiobooks, and podcasts on
           any device anywhere you like!
         </p>
-        <div class="summary-card__content-order-summary">
-          <img
-            src="./assets/images/icon-music.svg"
-            alt="Order summary illustration image"
-            class="summary-card__content-order-illustration-img"
-          />
-          <div class="summary-card__content-order-summary-details">
-            <p class="summary-card__content-order-summary-plan-type">
-              Annual Plan
-            </p>
-            <p class="summary-card__content-order-summary-plan-prices">
-              $59.99/year
-            </p>
+        <div class="summary-card__plan-presentation">
+          <figure class="summary-card__plan-presentation-illustration">
+            <img
+              src="./assets/images/icon-music.svg"
+              alt="Music icon"
+              class="summary-card__plan-presentation-icon"
+            />
+          </figure>
+          <div class="summary-card__plan-presentation-desc">
+            <p class="summary-card__plan-presentation-type">Annual Plan</p>
+            <p class="summary-card__plan-presentation-price">$59.99/year</p>
           </div>
-          <a href="#" class="summary-card__content-order-change-link">Change</a>
+          <a href="#" class="summary-card__plan-presentation-change-link"
+            >Change</a
+          >
         </div>
 
-        <div class="summary-card__payment-section">
-          <a href="#" class="summary-card__proceed-payment"
-            >Proceed to payment</a
-          >
-          <a href="#" class="summary-card__cancel-payment">Cancel Order</a>
-        </div>
+        <a href="#" class="summary-card__proceed-payment-btn"
+          >Proceed to Payment</a
+        >
+        <a href="#" class="summary-card__cancel-link"> Cancel Order</a>
       </div>
     </div>
   </body>
